GitHub implementation + tests change